--- a/xgetter/build.gradle
+++ b/xgetter/build.gradle
@@ -27,6 +27,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.13'
+    implementation 'androidx.appcompat:appcompat:1.3.0-alpha01'
+    implementation 'androidx.annotation:annotation:1.8.2'
     androidTestImplementation 'androidx.test:runner:1.3.0-rc01'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-rc01'
     implementation 'org.apache.commons:commons-lang3:3.8.1'
